initial buttons style

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <section class="home section" id="home">
             <div class="home__container container grid">
                 <div class="home__data">
-                    <span class="home__greeting">Hello, i'm</span>
+                    <span class="home__greeting">Olá! Eu sou</span>
                     <h1 class="home__name">Valter Silva</h1>
                     <h3 class="home__education">java web developer ☕</h3>
                     <div class="home__handle">
@@ -84,13 +84,13 @@
                     </div>
 
                     <div class="home__social">
-                        <a href="https://www.linkedin.com/in/valter-silva-5a44b1171/" class="home__social-link">
+                        <a href="https://www.linkedin.com/in/valter-silva-5a44b1171/" class="home__social-link" target="_blank">
                             <i class='bx bxl-linkedin-square'></i>
                         </a>
-                        <a href="https://github.com/valterchess" class="home__social-link">
+                        <a href="https://github.com/valterchess" class="home__social-link" target="_blank">
                             <i class='bx bxl-github'></i>
                         </a>
-                        <a href="https://gitlab.com/valterchess" class="home__social-link">
+                        <a href="https://gitlab.com/valterchess" class="home__social-link" target="_blank">
                             <i class='bx bxl-gitlab'></i>
                         </a>
                     </div>
