--- a/index.html
+++ b/index.html
@@ -180,9 +180,6 @@
                                     <span class="skills__level">Basic</span>
                                 </div>
                             </div>
-                        </div>
-
-                        <div class="skills__group">
                             <div class="skills__data">
                                 <i class='bx bxs-badge-check'></i>
                                 <div>
@@ -190,6 +187,9 @@
                                     <span class="skills__level">Basic</span>
                                 </div>
                             </div>
+                        </div>
+
+                        <div class="skills__group">
 
                             <div class="skills__data">
                                 <i class='bx bxs-badge-check'></i>
@@ -205,6 +205,14 @@
 
                                 <div>
                                     <h3 class="skills__name">React</h3>
+                                    <span class="skills__level">Basic</span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <i class='bx bxs-badge-check'></i>
+
+                                <div>
+                                    <h3 class="skills__name">Redux</h3>
                                     <span class="skills__level">Basic</span>
                                 </div>
                             </div>
@@ -227,18 +235,18 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">Python</h3>
-                                    <span class="skills__level">Basic</span>
-                                </div>
-                            </div>
-                            <div class="skills__data">
-                                <i class='bx bxs-badge-check'></i>
-
-                                <div>
                                     <h3 class="skills__name">MySql</h3>
                                     <span class="skills__level">Basic</span>
                                 </div>
                             </div>
+                            <!-- <div class="skills__data">
+                                <i class='bx bxs-badge-check'></i>
+
+                                <div>
+                                    <h3 class="skills__name">MongoDB</h3>
+                                    <span class="skills__level">Basic</span>
+                                </div>
+                            </div> -->
                         </div>
 
                         <div class="skills__group">
@@ -258,15 +266,6 @@
                                     <span class="skills__level">Basic</span>
                                 </div>
                             </div>
-
-                            <div class="skills__data">
-                                <i class='bx bxs-badge-check'></i>
-
-                                <div>
-                                    <h3 class="skills__name">MongoDB</h3>
-                                    <span class="skills__level">Basic</span>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -274,9 +273,126 @@
         </section>
 
         <!--=============== SERVICES ===============-->
-        <section class="services section">
+        <!-- <section class="services section">
+            <span class="section__subtitle">My Services</span>
+            <h2 class="section__title">What I Offer</h2>
 
-        </section>
+            <div class="services__container container grid">
+                <div class="services__card">
+                    <h3 class="services__title">Product <br> Designer</h3>
+
+                    <span class="services__button">
+                        See more <i class='bx bx-right-arrow-alt services__icon'></i>
+                    </span>
+
+                    <div class="services__modal">
+                        <div class="services__modal-content">
+                            <i class='bx bx-x services__modal-close'></i>
+
+                            <h3 class="services__modal-title">Product Designer</h3>
+                            <p class="services__modal-description">
+                                Service with more than 2 years of experience.
+                                Providing quality work to clients and companies.
+                            </p>
+
+                            <ul class="services__modal-list">
+                                <li class="services__modal-item">
+                                    <i class="bx bx-check services__modal-icon"></i>
+                                    <p class="services__modal-info">
+                                        I develop the user interface.
+                                    </p>
+                                </li>
+
+                                <li class="services__modal-item">
+                                    <i class="bx bx-check services__modal-icon"></i>
+                                    <p class="services__modal-info">
+                                        Web page development.
+                                    </p>
+                                </li>
+
+                                <li class="services__modal-item">
+                                    <i class="bx bx-check services__modal-icon"></i>
+                                    <p class="services__modal-info">
+                                        I create ux element inteactions.
+                                    </p>
+                                </li>
+
+                                <li class="services__modal-item">
+                                    <i class="bx bx-check services__modal-icon"></i>
+                                    <p class="services__modal-info">
+                                        I position your company brand.
+                                    </p>
+                                </li>
+
+                                <li class="services__modal-item">
+                                    <i class="bx bx-check services__modal-icon"></i>
+                                    <p class="services__modal-info">
+                                        Design and mockups of products for companies.
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="services__card">
+                    <h3 class="services__title">UI/UX <br> Designer</h3>
+
+                    <span class="services__button">
+                        See more <i class='bx bx-right-arrow-alt services__icon'></i>
+                    </span>
+
+                    <div class="services__modal">
+                        <div class="services__modal-content">
+                            <i class='bx bx-x services__modal-close'></i>
+
+                            <h3 class="services__modal-title">UI/UX Designer</h3>
+                            <p class="services__modal-description">
+                                Service with more than 2 years of experience.
+                                Providing quality work to clients and companies.
+                            </p>
+
+                            <ul class="services__modal-list">
+                                <li class="services__modal-item">
+                                    <i class="bx bx-check services__modal-icon"></i>
+                                    <p class="services__modal-info">
+                                        I develop the user interface.
+                                    </p>
+                                </li>
+
+                                <li class="services__modal-item">
+                                    <i class="bx bx-check services__modal-icon"></i>
+                                    <p class="services__modal-info">
+                                        Web page development.
+                                    </p>
+                                </li>
+
+                                <li class="services__modal-item">
+                                    <i class="bx bx-check services__modal-icon"></i>
+                                    <p class="services__modal-info">
+                                        I create ux element inteactions.
+                                    </p>
+                                </li>
+
+                                <li class="services__modal-item">
+                                    <i class="bx bx-check services__modal-icon"></i>
+                                    <p class="services__modal-info">
+                                        I position your company brand.
+                                    </p>
+                                </li>
+
+                                <li class="services__modal-item">
+                                    <i class="bx bx-check services__modal-icon"></i>
+                                    <p class="services__modal-info">
+                                        Design and mockups of products for companies.
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section> -->
 
         <!--=============== WORK ===============-->
         <section class="work section" id="work">
