add section work html

--- a/index.html
+++ b/index.html
@@ -396,6 +396,68 @@
 
         <!--=============== WORK ===============-->
         <section class="work section" id="work">
+            <span class="section__subtitle">My portfolio</span>
+            <h2 class="section__title">Recent Works</h2>
+            <div class="work__filters">
+                <span class="work__item">All</span>
+                <span class="work__item">API</span>
+                <span class="work__item">Fullstack</span>
+                <span class="work__item">Frontend</span>
+            </div>
+
+            <div class="work__container container grid">
+
+                <div class="work__card">
+                    <img src="assets/img/work1.jpg" alt="" class="work__img">
+
+                    <h3 class="work__title">Fullstack</h3>
+
+                    <a href="#" class="work__button">
+                        Demo <i class='bx bx-right-arrow-alt work__icon' ></i>
+                    </a>
+                </div>
+
+                <div class="work__card">
+                    <img src="assets/img/work2.jpg" alt="" class="work__img">
+
+                    <h3 class="work__title">Frontend</h3>
+
+                    <a href="#" class="work__button">
+                        Demo <i class='bx bx-right-arrow-alt work__icon' ></i>
+                    </a>
+                </div>
+
+                <div class="work__card">
+                    <img src="assets/img/work3.jpg" alt="" class="work__img">
+
+                    <h3 class="work__title">Api</h3>
+
+                    <a href="#" class="work__button">
+                        Demo <i class='bx bx-right-arrow-alt work__icon' ></i>
+                    </a>
+                </div>
+
+                <div class="work__card">
+                    <img src="assets/img/work4.jpg" alt="" class="work__img">
+
+                    <h3 class="work__title">Api</h3>
+
+                    <a href="#" class="work__button">
+                        Demo <i class='bx bx-right-arrow-alt work__icon' ></i>
+                    </a>
+                </div>
+
+                <div class="work__card">
+                    <img src="assets/img/work5.jpg" alt="" class="work__img">
+
+                    <h3 class="work__title">Frontend</h3>
+
+                    <a href="#" class="work__button">
+                        Demo <i class='bx bx-right-arrow-alt work__icon' ></i>
+                    </a>
+                </div>
+
+            </div>
 
         </section>
 
