--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             <span class="section__subtitle">My portfolio</span>
             <h2 class="section__title">Recent Works</h2>
             <div class="work__filters">
-                <span class="work__item">All</span>
+                <span class="work__item active-work">All</span>
                 <span class="work__item">API</span>
                 <span class="work__item">Fullstack</span>
                 <span class="work__item">Frontend</span>
