--- a/index.html
+++ b/index.html
@@ -430,11 +430,11 @@
                 </div>
 
                 <div class="work__card mix full">
-                    <img src="assets/img/work1.jpg" alt="" class="work__img">
+                    <img src="https://i.imgur.com/lCJCNkF.png" alt="" class="work__img">
 
                     <h3 class="work__title">Fullstack</h3>
 
-                    <a href="#" class="work__button">
+                    <a href="https://urbanize.vercel.app/home" class="work__button">
                         Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
