add section contact

--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                         número de loteria api <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
-                
+
             </div>
             <!--  -->
 
@@ -521,7 +521,59 @@
 
         <!--=============== CONTACT ===============-->
         <section class="contact section" id="contact">
+            <span class="section__subtitle">Get in touch</span>
+            <h2 class="section__title">Contact me</h2>
 
+            <div class="contact__container container grid">
+                <div class="contact__content">
+                    <h3 class="contact__title">Talk to me</h3>
+
+                    <div class="contact__info">
+                        <div class="contact__card">
+                            <i class='bx bx-mail-send contact__card-icon'></i>
+                            <h3 class="contact__card-title">Email</h3>
+                            <span class="contact__card-data">valter.silva.dev@gmail.com</span>
+
+                            <a href="mailto:valter.silva.dev@gmail.com" target="_blank" class="contact__button">
+                                Write me <i class='bx bx-right-arrow-alt contact__button-icon' ></i>
+                            </a>
+                        </div>
+
+                        <div class="contact__card">
+                            <i class='bx bxl-whatsapp contact__card-icon' ></i>
+                            <h3 class="contact__card-title">Whatsapp</h3>
+                            <span class="contact__card-data">+55 11 98366-7289</span>
+
+                            <a href="https://api.whatsapp.com/send?phone=5511983667289&text=Hello, more information!" target="_blank" class="contact__button">
+                                Write me <i class='bx bx-right-arrow-alt contact__button-icon' ></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="contact__content">
+                    <h3 class="contact__title">Propostas ou sugestões</h3>
+
+                    <form action="" class="contact__form">
+                        <div class="contact__form-div">
+                            <label for="" class="contact__form-tag">Nome</label>
+                            <input type="text" placeholder="Informe seu nome" class="contact__form-input">
+                        </div>
+
+                        <div class="contact__form-div">
+                            <label for="" class="contact__form-tag">Email</label>
+                            <input type="email" placeholder="Informe seu email" class="contact__form-input">
+                        </div>
+
+                        <div class="contact__form-div">
+                            <label for="" class="contact__form-tag">Mensagem</label>
+                            <textarea name="" id="" cols="30" rows="10" placeholder="Escreva sua mensagem" class="contact__form-input"></textarea>
+                        </div>
+
+                        <button class="button">Send Message</button>
+                    </form>
+                </div>
+            </div>
         </section>
     </main>
 
