update style section contact

--- a/index.html
+++ b/index.html
@@ -565,12 +565,12 @@
                             <input type="email" placeholder="Informe seu email" class="contact__form-input">
                         </div>
 
-                        <div class="contact__form-div">
+                        <div class="contact__form-div contact__form-area">
                             <label for="" class="contact__form-tag">Mensagem</label>
                             <textarea name="" id="" cols="30" rows="10" placeholder="Escreva sua mensagem" class="contact__form-input"></textarea>
                         </div>
 
-                        <button class="button">Send Message</button>
+                        <button class="button">Enviar Mensagem</button>
                     </form>
                 </div>
             </div>
