add footer section html

--- a/index.html
+++ b/index.html
@@ -535,17 +535,18 @@
                             <span class="contact__card-data">valter.silva.dev@gmail.com</span>
 
                             <a href="mailto:valter.silva.dev@gmail.com" target="_blank" class="contact__button">
-                                Write me <i class='bx bx-right-arrow-alt contact__button-icon' ></i>
+                                Write me <i class='bx bx-right-arrow-alt contact__button-icon'></i>
                             </a>
                         </div>
 
                         <div class="contact__card">
-                            <i class='bx bxl-whatsapp contact__card-icon' ></i>
+                            <i class='bx bxl-whatsapp contact__card-icon'></i>
                             <h3 class="contact__card-title">Whatsapp</h3>
                             <span class="contact__card-data">+55 11 98366-7289</span>
 
-                            <a href="https://api.whatsapp.com/send?phone=5511983667289&text=Hello, more information!" target="_blank" class="contact__button">
-                                Write me <i class='bx bx-right-arrow-alt contact__button-icon' ></i>
+                            <a href="https://api.whatsapp.com/send?phone=5511983667289&text=Hello, more information!"
+                                target="_blank" class="contact__button">
+                                Write me <i class='bx bx-right-arrow-alt contact__button-icon'></i>
                             </a>
                         </div>
                     </div>
@@ -567,7 +568,8 @@
 
                         <div class="contact__form-div contact__form-area">
                             <label for="" class="contact__form-tag">Mensagem</label>
-                            <textarea name="" id="" cols="30" rows="10" placeholder="Escreva sua mensagem" class="contact__form-input"></textarea>
+                            <textarea name="" id="" cols="30" rows="10" placeholder="Escreva sua mensagem"
+                                class="contact__form-input"></textarea>
                         </div>
 
                         <button class="button">Enviar Mensagem</button>
@@ -579,7 +581,35 @@
 
     <!--=============== FOOTER ===============-->
     <footer class="footer">
+        <div class="footer__container container">
+            <h1 class="footer__title">Valter</h1>
 
+            <ul class="footer__list">
+                <li>
+                    <a href="#about" class="footer__link">About</a>
+                </li>
+                <li>
+                    <a href="#work" class="footer__link">Projects</a>
+                </li>
+                <li>
+                    <a href="#skill" class="footer__link">Experience</a>
+                </li>
+            </ul>
+
+            <ul class="footer__social">
+                <a href="https://www.facebook.com/valter.fsilva.31" target="_blank" class="footer__social-link">
+                    <i class='bx bxl-facebook' ></i>
+                </a>
+
+                <a href="https://www.instagram.com/valter.silva.dev/" target="_blank" class="footer__social-link">
+                    <i class='bx bxl-instagram' ></i>
+                </a>
+            </ul>
+
+            <span class="footer__copy">
+                &#169; valter Silva.
+            </span>
+        </div>
     </footer>
 
     <!--=============== SCROLLREVEAL ===============-->
