add new projects

--- a/index.html
+++ b/index.html
@@ -410,22 +410,32 @@
 
 
                 <div class="work__card mix front">
-                    <img src="assets/img/work5.jpg" alt="" class="work__img">
+                    <img src="https://i.imgur.com/X2nyvYr.png" alt="" class="work__img">
 
                     <h3 class="work__title">Frontend</h3>
 
-                    <a href="#" class="work__button">
-                        Demo <i class='bx bx-right-arrow-alt work__icon'></i>
+                    <a href="https://xadrez-react.vercel.app" class="work__button">
+                        xadrez react aleatório <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
 
                 <div class="work__card mix front">
-                    <img src="assets/img/work2.jpg" alt="" class="work__img">
+                    <img src="https://i.imgur.com/0LoHeUP.png" alt="" class="work__img">
 
                     <h3 class="work__title">Frontend</h3>
 
-                    <a href="#" class="work__button">
-                        Demo <i class='bx bx-right-arrow-alt work__icon'></i>
+                    <a href="https://cronometro-vert.vercel.app" class="work__button">
+                        Cronometro <i class='bx bx-right-arrow-alt work__icon'></i>
+                    </a>
+                </div>
+
+                <div class="work__card mix front">
+                    <img src="https://i.imgur.com/Bqg3wre.png" alt="" class="work__img">
+
+                    <h3 class="work__title">Frontend</h3>
+
+                    <a href="https://desafio-qr-code.vercel.app" class="work__button">
+                        Desafios - Frontend <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
 
@@ -435,7 +445,7 @@
                     <h3 class="work__title">Fullstack</h3>
 
                     <a href="https://urbanize.vercel.app/home" class="work__button">
-                        Demo <i class='bx bx-right-arrow-alt work__icon'></i>
+                        Urbanize <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
 
