update footer style

--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
     <!--=============== FOOTER ===============-->
     <footer class="footer">
         <div class="footer__container container">
-            <h1 class="footer__title">Valter</h1>
+            <h1 class="footer__title">Valter Silva</h1>
 
             <ul class="footer__list">
                 <li>
@@ -608,11 +608,11 @@
 
             <ul class="footer__social">
                 <a href="https://www.facebook.com/valter.fsilva.31" target="_blank" class="footer__social-link">
-                    <i class='bx bxl-facebook' ></i>
+                    <i class='bx bxl-facebook'></i>
                 </a>
 
                 <a href="https://www.instagram.com/valter.silva.dev/" target="_blank" class="footer__social-link">
-                    <i class='bx bxl-instagram' ></i>
+                    <i class='bx bxl-instagram'></i>
                 </a>
             </ul>
 
